--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -38,12 +38,12 @@ html[data-theme='dark'] {
   --global-code-bg-color: #{$code-bg-color-dark};
   --global-text-color: #{$grey-color-light};
   --global-text-color-light: #{$grey-color-light};
-  --global-theme-color: #{$cyan-color};
-  --global-hover-color: #{$cyan-color};
-  --global-footer-bg-color: #{$grey-color-light};
+  --global-theme-color: #{$green-color-bright};
+  --global-hover-color: #{$green-color-bright};
+  --global-footer-bg-color: #{$green-color-bright};
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
-  --global-distill-app-color: #{$grey-color-light};
+  --global-distill-app-color: #{$green-color-bright};
   --global-divider-color: #424246;
   --global-card-bg-color: #{$grey-900};
 
