added new info (instagram/spotify accounts)

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -55,3 +55,7 @@
             {%- if site.rss_icon -%}
             <a href="{{ site.baseurl | prepend: site.url }}/feed.xml" title="RSS Feed"><i class="fas fa-rss-square"></i></a>
             {% endif %}
+
+<!-- Personal Socials -->
+<a href="https://instagram.com/hattyoriiiiiii" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+<a href="https://open.spotify.com/user/31f4tipfco4mbtjzeiffmp3ot3i4" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
