--- a/_includes/social.html
+++ b/_includes/social.html
@@ -59,3 +59,4 @@
 <!-- Personal Socials -->
 <a href="https://instagram.com/hattyoriiiiiii" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
 <a href="https://open.spotify.com/user/31f4tipfco4mbtjzeiffmp3ot3i4" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
+<a href="https://www.kaggle.com/hattyoriiiiiii" target="_blank" title="Kaggle"><i class="fab fa-kaggle"></i></a>
